# FastAPI-ESG-Tracker-for-SMBs-with-LLM-optimization-replit

./: .env.example  .replit  ESG Compliance Tracker - Deployment Guide.md  ESG Compliance Tracker - Project Summary.md  ESG Compliance Tracker API Documentation.md  ESG Compliance Tracker.md  README-PRODUCTION.md  __init__.py  auth.py  auth_service.py  config.py  csv_data.py  csv_service.py  database.py  docker-compose.prod.yml  docker-compose.yml  email_service.py  esg.py  frontend_workflow.py  industry_templates.py  init.sql  llm_service.py  main.py  nginx.conf  predictive.py  predictive_service.py  pyproject.toml  render.yaml  requirements.txt  sample_esg_data.csv  scoring_service.py  scraping.py  scraping_service.py  security.py  tasks.py  test_app.py  upload.py  user.py
attached_assets/: Pasted--workspace-pip-install-r-requirements-txt-Collecting-fastapi-0-104-1-from-r-requirements-txt--1754747785910_1754747785911.txt  Pasted--workspace-poetry-install-Updating-dependencies-Resolving-dependencies-28-8s-Warning-The-loc-1754748456253_1754748456254.txt  Pasted--workspace-python-test-app-py-ESG-Compliance-Tracker-Application-Tests--1754756461233_1754756461234.txt  Pasted--workspace-python-test-app-py-ESG-Compliance-Tracker-Application-Tests--1754756578525_1754756578525.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
scripts/: production-deploy.sh  secret-rotation.sh  setup-ssl.sh  smoke-test.sh
(+1 files in other folders)
