
[tool.poetry]
name = "esg-compliance-tracker"
version = "1.0.0"
description = "ESG Compliance Tracker for retail SMBs - optimized for free LLM usage"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
python-multipart = "0.0.6"
firebase-admin = "6.2.0"
supabase = "2.0.2"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
sqlalchemy = "2.0.23"
alembic = "1.12.1"
psycopg2-binary = "2.9.9"
pandas = "2.1.4"
numpy = "1.26.2"
openpyxl = "3.1.2"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
feedparser = "6.0.10"
openai = "1.12.0"
groq = "0.4.2"
google-generativeai = "0.3.2"
python-dotenv = "1.0.0"
pydantic = "2.5.0"
pydantic-settings = "2.1.0"
fastapi-cors = "0.0.6"
aiofiles = "23.2.1"
email-validator = "^2.1.1"
python-dateutil = "2.8.2"
jose = "*"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
httpx = "0.24.1"
black = "23.11.0"
flake8 = "6.1.0"
mypy = "1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
